--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
   "license": "ISC",
   "author": "Unkn Own",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    }
+  },
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "eslint --config eslint.config.cjs . --ext .ts",
